# finance-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  部署步骤.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  answer_actor.py  graph.py  llm_plan_critic.py  llm_query_plan_actor.py  llm_result_critic.py  llm_sql_actor.py  llm_sql_critic.py  plan_reviewer.py  query_plan_actor.py  state.py
backend/app/api/: evaluation_routes.py  metadata_routes.py  routes.py  run_routes.py
backend/app/core/: config.py
backend/app/data/: __init__.py  dataset_adapter.py
backend/app/evaluation/: __init__.py
backend/app/guardrails/: __init__.py  result_validator.py  sql_guardrail.py
backend/app/llm/: client.py  json_parser.py  protocols.py  schemas.py
backend/app/metadata/: __init__.py  models.py  retriever.py  schema_context.py
backend/app/schemas/: __init__.py  evaluation.py  metadata.py  query.py  query_plan.py  review.py  run.py  sql.py
backend/app/services/: audit_logger.py  evaluation_service.py  llm_service.py  metadata_catalog_service.py  query_export_service.py  (+4 more)
backend/db/: README.md  schema.sql  seed_synthetic_data.py  validate_dataset_manifest.py
backend/tests/: test_answer_actor.py  test_dataset_adapter.py  test_evaluation_service.py  test_health.py  test_llm_actor_critic.py  test_llm_client.py  test_llm_json_parser.py  test_metadata_retriever.py  test_metadata_routes.py  test_query_events.py  test_query_export_service.py  test_query_service_core.py  test_result_validator.py  test_sql_guardrail.py
(+40 files in other folders)
