[project]
name = "finance-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a trustworthy customer-marketing data query agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.20",
  "sqlglot>=25.0.0",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# These files embed Chinese LLM instructions and canonical SQL examples. Splitting
# those literal lines changes the prompt content without improving maintainability.
"app/agents/llm_query_plan_actor.py" = ["E501"]
"app/agents/llm_sql_actor.py" = ["E501"]
"app/agents/llm_sql_critic.py" = ["E501"]
